# rust_job_scraper

./: Cargo.toml
src/: main.rs  models.rs
