[package]
name = "job_scraper"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.7.3", default-features = false, features = ["cloudwatch_events"] }

lambda_runtime = "0.8.0"

reqwest = "0.11.18"
scraper = "0.16.0"
tokio = { version = "1", features = ["macros", 'rt-multi-thread'] }
serde_json = "1.0.96"
serde = { version = "1.0.163" , features = ["derive"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
chrono = "0.4.26"
airtable = "*"
openssl = {version = "0.10.54", features = ["vendored"]}
